# mlb-betting

./: .gitignore  Makefile  README.md  pyproject.toml
archive/: data_cleaning_test.py  data_cleaning_test3.py
archive/batting/: batter_performance_notebook.ipynb  batter_performance_notebook2.ipynb  batter_performance_table.py
archive/misc/: Intro.py  pybaseball_practice.py  pybaseball_practice_nb.ipynb
archive/odds/: Odds_ETL.py
archive/pitching/: pitching_performance_notebook.ipynb
archive/tests/: test_data_cleaning.py  test_data_cleaning2.py
archive/untracked/: postgres_practice.py  sql_extra.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: batter_info.ipynb  batter_info.py
