[tool.poetry]
name = "mlb-betting-project"
version = "0.1.0"
description = ""
authors = ["Sam L <lafell.samuel@gmail.com>"]
readme = "README.md"
packages = [{include = "mlb_betting_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pybaseball = "^2.2.5"
cookiecutter = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
